--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "components": "^0.1.0",
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.3",
     "react": "^18.2.0",
